SERVER-4389